k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pqno
  namespace: pqno
spec:
  selector:
    app: pqno
  ports:
    - port: 80
      targetPort: 8000
